# SmartCalc2.0

./: .gitignore  LICENSE  Makefile  README.md
src/: CMakeLists.txt  counter.ps1
src/Calculation/: CMakeLists.txt
src/Calculation/include/private/Calculation/: LexemeParser
src/Calculation/include/public/Calculation/: OperationData
src/Calculation/include/public/Calculation/Equation/: Equation  EquationFactory  EquationX
src/Calculation/include/public/Calculation/Operations/: Associativity  BinaryOperation  IOperation  NumberOperation  Priority  UnaryOperation
src/Calculation/src/Equation/: Equation.cpp  EquationFactory.cpp  EquationX.cpp
src/Calculation/src/LexemeParser/: LexemeParser.cpp
src/Calculation/src/Operations/: BinaryOperation.cpp  NumberOperation.cpp  UnaryOperation.cpp
src/Calculation/tests/: CMakeLists.txt
src/Calculation/tests/include/: Equations  LexemeParser  Operations
src/Calculation/tests/src/: main.cpp
src/CalculationOperations/: CMakeLists.txt
src/CalculationOperations/include/public/CalculationOperations/: OperationSet
src/CalculationOperations/src/: OperationSet.cpp
src/CalculationOperations/tests/: CMakeLists.txt
src/CalculationOperations/tests/include/: Equations  EquationsWithX
src/CalculationOperations/tests/src/: main.cpp
src/CalculationRpn/: CMakeLists.txt
src/CalculationRpn/include/private/CalculationRpn/: LexemeParser  LexemeParser.h
src/CalculationRpn/include/private/CalculationRpn/LexemeParser/: LexemeParser.h
src/CalculationRpn/include/public/CalculationRpn/: OperationData.h
src/CalculationRpn/include/public/CalculationRpn/Equation/: Equation  Equation.h  EquationFactory  EquationFactory.h  EquationX  EquationX.h
src/CalculationRpn/include/public/CalculationRpn/Operations/: Associativity.h  BinaryOperation.h  IOperation.h  NumberOperation.h  Priority.h  UnaryOperation.h
src/CalculationRpn/src/Equation/: Equation.cpp  EquationFactory.cpp  EquationX.cpp
src/CalculationRpn/src/LexemeParser/: LexemeParser.cpp
src/CalculationRpn/src/Operations/: BinaryOperation.cpp  NumberOperation.cpp  UnaryOperation.cpp
src/CalculationRpn/tests/: CMakeLists.txt
src/CalculationRpn/tests/include/: Equations.h  LexemeParser.h  Operations.h
src/CalculationRpn/tests/src/: main.cpp
src/CompositionRoot/: CMakeLists.txt
src/CompositionRoot/src/: main.cpp
src/Controllers/: CMakeLists.txt
src/Controllers/include/public/Controllers/: CalculationController  CalculationController.h  CreditController
src/Controllers/src/: CalculationController.cpp  CreditController.cpp
src/Controllers/tests/: CMakeLists.txt
src/Credit/: CMakeLists.txt
src/Credit/include/public/Credit/: Credit  Info  Types
src/Credit/src/: Credit.cpp  Info.cpp
src/Credit/tests/: CMakeLists.txt
src/Credit/tests/include/: CreditTests
src/Credit/tests/src/: main.cpp
src/Deposit/: CMakeLists.txt
src/Deposit/include/public/Deposit/: Deposit  DepositCompute  Info  Types
src/Deposit/src/: Deposit.cpp
src/Deposit/tests/: CMakeLists.txt
src/Deposit/tests/include/: DepositTests
src/Deposit/tests/src/: main.cpp
src/Libs/: CMakeLists.txt
src/Libs/QCustomPlot/: CMakeLists.txt
src/Libs/QCustomPlot/include/: QCustomPlot  QCustomPlot.h
src/Libs/QCustomPlot/include/QCustomPlot/: QCustomPlot  QCustomPlot.h
src/Libs/QCustomPlot/src/: QCustomPlot.cpp
src/OperationsForCalculation/: CMakeLists.txt
src/OperationsForCalculation/include/public/OperationsForCalculation/: OperationSet.h
src/OperationsForCalculation/src/: OperationSet.cpp
src/OperationsForCalculation/tests/: CMakeLists.txt
src/OperationsForCalculation/tests/include/: Equations.h  EquationsWithX.h
src/OperationsForCalculation/tests/src/: main.cpp
src/SmartCalc/: CMakeLists.txt
src/SmartCalc/src/: main.cpp
src/Ui/: CMakeLists.txt
src/Ui/include/private/Ui/: Settings.h
src/Ui/include/private/Ui/Consts/: Consts  Consts.h  NumpadPreset  NumpadPreset.h  consts_.h
src/Ui/include/private/Ui/Styles/: CalculatorStyles.h  NumpadStyles  NumpadStyles.h  Styles.h  styles  styles.h
src/Ui/include/private/Ui/Widgets/Calculation/: Calculator  Calculator.h  FunctionMenu.h  Numpad.h
src/Ui/include/private/Ui/Widgets/Main/: MainWindow  MainWindow.h
src/Ui/include/public/Ui/: Settings.h  Synchronizer  Synchronizer.h
src/Ui/include/public/Ui/Controllers/: ICalculationController  ICalculationController.h  ICreditController  ICreditController.h  IDepositController.h
src/Ui/include/public/Ui/Main/: MainWindow  MainWindow.h
src/Ui/include/public/Ui/Widgets/: Calculation.h  ScrollableList  ScrollableList.h
src/Ui/include/public/Ui/Widgets/Calculation/: Calculator  Calculator.h  FunctionMenu  FunctionMenu.h  Numpad  Numpad.h
src/Ui/include/public/Ui/Widgets/CalculationWithX/: CalculationWithX  CalculationWithX.h
src/Ui/include/public/Ui/Widgets/Chart/: ChartWidget  ChartWidget.h
src/Ui/include/public/Ui/Widgets/Credit/: CreditWidget  CreditWidget.h
src/Ui/src/: MainWindow.cpp  Settings.cpp  Synchronizer.cpp
src/Ui/src/Widgets/: MainWindow.cpp  ScrollableList.cpp
src/Ui/src/Widgets/Calculation/: Calclulator.cpp  Calculation.cpp  Calculator.cpp  FunctionMenu.cpp  Numpad.cpp
src/Ui/src/Widgets/Calculation/Calculator/: Calclulator.cpp
src/Ui/src/Widgets/Calculation/Numpad/: Numpad.cpp
src/Ui/src/Widgets/CalculationWithX/: CalculationWithX.cpp
src/Ui/src/Widgets/Chart/: ChartWidget.cpp
src/Ui/src/Widgets/Credit/: CreditWidget.cpp
src/Ui/tests/: CMakeLists.txt
src/Ui/tests/src/: numpadTests.cpp
